Fix devices text alignment

--- a/universal-login-react/src/ui/styles/devices.sass
+++ b/universal-login-react/src/ui/styles/devices.sass
@@ -182,6 +182,8 @@
 
   .connected-devices-img-wrapper
     position: relative
+    min-width: 45px
+    max-width: 45px
     margin: 0 32px 0 0
 
   .connected-devices-img-wrapper::before
@@ -210,7 +212,7 @@
   .connected-devices-img
     display: block
     max-height: 45px
-    max-width: 45px
+    width: 100%
 
   .connected-devices-img.default
     opacity: 0.3
